# Knapsack-Problem

./: CMakeLists.txt  README.md
benchmarks/: p01_p.txtZone.Identifier  p01_s.txtZone.Identifier  p02_c.txtZone.Identifier  p02_p.txtZone.Identifier  p03_c.txtZone.Identifier  p03_s.txtZone.Identifier  p04_c.txtZone.Identifier  p04_s.txtZone.Identifier  p04_w.txtZone.Identifier  p05_w.txtZone.Identifier  p06_c.txtZone.Identifier  p06_p.txtZone.Identifier  p06_w.txtZone.Identifier  p07_c.txtZone.Identifier  p07_p.txtZone.Identifier  p07_w.txtZone.Identifier
benchmarks/benchmarks/: p01_c.txtZone.Identifier  p01_w.txtZone.Identifier  p02_s.txtZone.Identifier  p02_w.txtZone.Identifier  p03_p.txtZone.Identifier  p03_w.txtZone.Identifier  p04_p.txtZone.Identifier  p05_c.txtZone.Identifier  p05_p.txtZone.Identifier  p05_s.txtZone.Identifier  p06_s.txtZone.Identifier  p07_s.txtZone.Identifier
src/: 2-approx.cpp  Knapsack.hpp  branch_and_boundary_m.cpp  dinamic.cpp  ptas.cpp
